# sidhulabs-py

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: python-package.yml
sidhulabs/: decorators.py  notifications.py
sidhulabs/database/: conn.py
sidhulabs/elastic/: client.py  documents.py
tests/: test_sidhulabs.py
tests/database/: test_conn.py
