[tool.poetry]
name = "sidhulabs"
version = "2022.01.23.02.49"
description = "Common Python utility functions"
authors = ["Ashton Sidhu <ashton.sidhu1994@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
elasticsearch = "<8"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
