[tool.poetry]
name = "sidhulabs"
version = "2022.02.11.00.28"
description = "Common Python utility functions"
authors = ["Ashton Sidhu <ashton.sidhu1994@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.7,<4.0"
elasticsearch = ">=8,<9"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
isort = "5.10.1"
black = "21.11.b1"

[tool.black]
line-length = 120

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
